# hlsai

./: CONTRIBUTING.md  LICENSE  LICENSE.md  README.md
docs/: commercial-license.md  examples.md  faq.md  getting-started.md  index.md  technical-overview.md
encoder/: CMakeLists.txt  README.md
encoder/cmake/: FindOpenH264.cmake
encoder/src/: openh264_demo.cpp  ts_writer.cpp  ts_writer.h
examples/encoder/: README.md  run-encoder.sh
examples/player/: demo.html  manifest.m3u8
player/: hlsai-player.js  index.html
